fix: resolución de errores tras merge de rama developer/edwin
Cambios principales:
- Eliminación completa de Railway (json, scripts, referencias)
- Migración de autenticación: Sanctum  JWT (tymon/jwt-auth)
- Regeneración de composer.lock sin Laravel Sanctum
- Corrección de seeders: error de duplicados en usuarios fijos
- Simplificación de Dockerfile (removido railway-deploy.sh)
- Actualización de documentación (DOCKER.md, .env.example)

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Trouvels360
-APP_ENV=production
+APP_ENV=local
 APP_KEY=
-APP_DEBUG=false
-APP_URL=https://your-app-name.up.railway.app
+APP_DEBUG=true
+APP_URL=http://localhost:8000
 APP_TIMEZONE=UTC
 
 LOG_CHANNEL=stack
